--- a/src/pages/play/index.scss
+++ b/src/pages/play/index.scss
@@ -47,7 +47,7 @@
         .board-body {
             margin-top: 10px;
             border-radius: 10px;
-            border: 1px #d0c6b0 solid;
+            border: 1px #491d16 solid;
             overflow: hidden;
             transform: translateZ(0);
         }
